src2/objects/IoT_Verfication_Log_Entry__c.object
<CustomObject>
    <description>Log messages generated in IoT machine message verification processes</description>
    <fields>
        <fullName>IoT_Audit_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IoT Audit Log</label>
        <referenceTo>IoT_Audit_Log__c</referenceTo>
        <relationshipLabel>IoT Verfication Log</relationshipLabel>
        <relationshipName>IoT_Verfication_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IoT_Message_Verification_Process__c</fullName>
        <label>IoT Message Verification Process</label>
        <referenceTo>IoT_Message_Validation_Process__c</referenceTo>
        <relationshipLabel>IoT Verfication Log</relationshipLabel>
        <relationshipName>IoT_Verfication_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <formula>IoT_Audit_Log__r.UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UUID</label>
        <type>Text</type>
    </fields>
    <label>IoT Verfication Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>IoT Verfication Log Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IoT Verfication Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>